<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="#ccc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="40sp"
        android:backgroundTint="@color/tint"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColor="#ccc"
        android:textColorHint="#ccc" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/userText"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/textGreen"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/radio2"
            android:textColor="@color/textRed" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/radio3"
            android:textColor="@color/textBlue" />
    </RadioGroup>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/radios"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="15sp"
        android:background="#ccc"
        android:fontFamily="@string/font_family_black"
        android:text="TextView" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="190sp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="15sp"
        android:text="@string/button2" />

</RelativeLayout>